all test files and jasmine

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Software Engineering Assignment 3, Deshna Doshi",
   "main": "appointment.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jasmine"
   },
   "author": "Deshna Doshi",
   "license": "ISC",
